[fix] set estimated virtual height in order to correctly pre-calculate scrollbar width

--- a/example/example.css
+++ b/example/example.css
@@ -4,7 +4,7 @@ body {
 }
 
 .dgtable-wrapper * {
-    box-sizing: border-box;
+    box-sizing: content-box;
 }
 
 .dgtable-wrapper {
